finished moving stuff

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -226,19 +226,17 @@ skills:
     fury:
       enabled: true
       maxlevel: 3
-      baseBonusDamage: 0.0
-      bonusDamageIncreasePerLevel: 0.5
+      baseDamage: 1.0
+      damageIncreasePerLevel: 0.5
+      baseMaxDamage: 2.0
+      maxDamageIncreasePerLevel: 1.0
+      expirationTime: 5.0
     thorns:
       enabled: true
       maxlevel: 3
       internalCooldown: 2.0
       baseDamage: 0.0
       damageIncreasePerLevel: 0.8
-    sacrifice:
-      enabled: true
-      maxlevel: 3
-      basePercentage: 0.0
-      percentageIncreasePerLevel: 0.08
     defensivestance:
       enabled: true
       maxlevel: 5
@@ -478,7 +476,7 @@ skills:
       duration: 2.0
   brute:
     battletaunt:
-      enabled: true
+      enabled: false
       energy: 15
       maxlevel: 5
       cooldown: 0.5
@@ -510,6 +508,11 @@ skills:
       distanceIncreasePerLevel: 0.0
       baseDamage: 3.0
       damageIncreasePerLevel: 1.0
+    sacrifice:
+      enabled: true
+      maxlevel: 3
+      basePercentage: 0.0
+      percentageIncreasePerLevel: 0.08
     cripplingblow:
       enabled: true
       maxlevel: 3
@@ -574,24 +577,6 @@ skills:
       duration: 9.0
       cooldownDecreasePerLevel: 1.0
       speedStrength: 1
-    spiritofthebear:
-      enabled: true
-      maxlevel: 5
-      cooldown: 20.0
-      radius: 5
-      duration: 5.0
-      cooldownDecreasePerLevel: 2.0
-      resistanceStrength: 1
-    strengthinnumbers:
-      enabled: true
-      maxlevel: 5
-      cooldown: 20.0
-      radius: 10
-      duration: 2.0
-      cooldownDecreasePerLevel: 1.0
-      baseDuration: 2.0
-      durationIncreasePerLevel: 2.0
-      strengthStrength: 1
   ranger:
     wolfspounce:
       enabled: true
@@ -760,6 +745,27 @@ skills:
       numAttacksToReducePerLevel: 0
       range: 8
       duration: 60.0
+    scarletbastion:
+      enabled: true
+      maxlevel: 5
+      cooldown: 20.0
+      radius: 5
+      duration: 5.0
+      cooldownDecreasePerLevel: 2.0
+      resistanceStrength: 1
+      baseHealthReduction: 0.4
+      healthReductionDecreasePerLevel: 0.05
+    crimsonempowerment:
+      enabled: true
+      maxlevel: 5
+      cooldown: 20.0
+      radius: 10
+      cooldownDecreasePerLevel: 1.0
+      baseDuration: 4.0
+      durationIncreasePerLevel: 2.0
+      strengthStrength: 1
+      baseHealthReduction: 0.5
+      healthReductionDecreasePerLevel: 0.05
     bloodshed:
       enabled: true
       maxlevel: 5
@@ -816,7 +822,7 @@ skills:
       canUseWhileStunned: true
       canUseWhileLevitating: true
       cooldownDecreasePerLevel: 1.0
-      baseHealthReduction: 0.5
+      baseHealthReduction: 0.4
       healthReductionDecreasePerLevel: 0.05
       baseRange: 5.0
       rangeIncreasePerLevel: 1.0
