--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -381,12 +381,12 @@ skills:
     lifebonds:
       enabled: true
       maxlevel: 5
-      energy: 9
-      duration: 2.0
+      energy: 25
       baseRadius: 2.0
       radiusIncreasePerLevel: 1.0
-      minRadius: 2.0
       energyDecreasePerLevel: 1.0
+      healCooldown: 3.0
+      healSpeed: 0.4
     magmablade:
       enabled: true
       maxlevel: 3
