--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -331,7 +331,7 @@ skills:
       enabled: true
       maxlevel: 5
       cooldown: 23.0
-      speed: 0.25
+      speed: .15
       damage: 6.0
       fireDurationIncreasePerLevel: 2.0
       cooldownDecreasePerLevel: 2.0
