The great rework

--- a/champions/src/main/resources/configs/config.yml
+++ b/champions/src/main/resources/configs/config.yml
@@ -29,5 +29,8 @@ command:
     requiredRank: ADMIN
     seeOtherPlayerSkillsRank: ADMIN
 combat:
-  arrow-base-damage: 4.5
+  arrow-base-damage: 6.0
   crit-arrows: true
+  crossbow:
+    cooldownDuration: 1.5
+    cooldownEnabled: true
