--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -172,15 +172,11 @@ skills:
     vengeance:
       enabled: true
       maxlevel: 3
-      damageIncrease: 0.25
-      canUseWhileSlowed: true
-      canUseWhileSilenced: false
-      canUseWhileStunned: false
-      canUseWhileLevitating: false
-      canUseInLiquid: false
-      baseDamage: 0.25
-      damageIncreasePerLevel: 0.25
+      baseDamage: 0.0
+      damageIncreasePerLevel: 1.0
       baseMaxDamage: 1.0
+      baseMaxDamageIncreasePerLevel: 1.0
+      expirationTime: 5.0
     levelfield:
       enabled: true
       maxlevel: 3
@@ -487,8 +483,12 @@ skills:
     fury:
       enabled: true
       maxlevel: 3
-      baseBonusDamage: 0.0
+      baseDamage: 0.5
+      damageIncreasePerLevel: 0.5
       bonusDamageIncreasePerLevel: 0.5
+      baseMaxDamage: 2.0
+      maxDamageIncreasePerLevel: 1.0
+      expirationTime: 5.0
     battletaunt:
       enabled: false
       energy: 15
