Update default values

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -303,17 +303,22 @@ skills:
       baseSlowDuration: 1.5
       slowDurationIncreasePerLevel: 0.0
       slowStrength: 2
-    boulder:
+    blocktoss:
       enabled: true
-      cooldown: 25.0
-      maxlevel: 5
-      baseRadius: 4.0
-      baseHeal: 2.0
-      baseDamage: 3.0
+      maxlevel: 3
+      cooldown: 10.0
       cooldownDecreasePerLevel: 1.0
-      healingIncreasePerLevel: 1.0
-      damageIncreasePerLevel: 1.0
+      baseCharge: 55.0
+      chargeIncreasePerLevel: 15.0
+      baseDamage: 10.0
+      damageIncreasePerLevel: 2.0
+      baseRadius: 4.0
       radiusIncreasePerLevel: 0.5
+      baseSpeed: 1.4
+      speedIncreasePerLevel: 0.1
+      hitBoxSize: 1.0
+      size: 0.6
+      sizePerLevel: 0.2
     inferno:
       enabled: true
       maxlevel: 3
