--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -426,6 +426,13 @@ skills:
       slowStrength: 2
       slowDuration: 2.0
       energyDecreasePerLevel: 1.0
+    glacialblade:
+      enabled: true
+      maxlevel: 3
+      cooldown: 2.5
+      cooldownDecreasePerLevel: 1.0
+      damage: 2.5
+      damageIncreasePerLevel: 1.0
     void:
       enabled: true
       maxlevel: 5
