--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -9,15 +9,14 @@ skills:
       cooldownDecreasePerLevel: 0.5
       leapStrength: 1.3
       wallKickStrength: 0.9
-    recursivestrike:
+    swiftstrike:
       enabled: true
-      cooldown: 15.0
-      cooldownDecreasePerLevel: 2.0
+      cooldown: 12.0
+      cooldownDecreasePerLevel: 1.0
       maxlevel: 3
-      baseDamage: 3.0
-      damageIncreasePerLevel: 1.0
-      distance: 4.0
-      numHitsRequired: 3
+      distance: 5.0
+      cooldownReductionPerHit: 3.0
+      perHitReductionPerLevelIncrease: 0.5
     sever:
       enabled: true
       cooldown: 20.0
