--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -9,14 +9,16 @@ skills:
       cooldownDecreasePerLevel: 0.5
       leapStrength: 1.3
       wallKickStrength: 0.9
-    swiftstrike:
+    slash:
       enabled: true
-      cooldown: 12.0
+      cooldown: 11.0
       cooldownDecreasePerLevel: 1.0
       maxlevel: 3
       distance: 5.0
       cooldownReductionPerHit: 3.0
       perHitReductionPerLevelIncrease: 0.5
+      damage: 3.0
+      damageIncreasePerLevel: 2.0
     sever:
       enabled: true
       cooldown: 20.0
