--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -72,14 +72,15 @@ skills:
       maxlevel: 3
       damageIncrement: 1.0
       duration: 2.0
-    concussion:
+    slash:
       enabled: true
       cooldown: 16.0
-      maxlevel: 3
-      durationPerLevel: 1.5
       cooldownDecreasePerLevel: 1.0
-      baseDuration: 0.0
-      durationIncreasePerLevel: 1.5
+      maxlevel: 3
+      distance: 5.0
+      cooldownReductionPerHit: 4.0
+      damage: 3.0
+      damageIncreasePerLevel: 1.0
     excessiveforce:
       enabled: true
       cooldown: 16.0
