--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -621,13 +621,14 @@ skills:
       slowDuration: 3.0
       slowDurationIncreasePerLevel: 0.0
       slowStrength: 1
-    stunningshot:
+    explosivearrow:
       enabled: true
       maxlevel: 5
-      cooldown: 25.0
-      cooldownDecreasePerLevel: 1.0
-      baseDuration: 0.0
-      durationIncreasePerLevel: 0.25
+      cooldown: 12.0
+      damage: 10.0
+      damageIncreasePerLevel: 0.0
+      radius: 4.5
+      radiusIncreasePerLevel: 0.5
     incendiaryshot:
       enabled: true
       maxlevel: 5
