--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -370,7 +370,7 @@ skills:
       maxTarget: 3
       shockDuration: 2.0
     swarm:
-      enabled: true
+      enabled: false
       maxlevel: 5
       energy: 6
       batLifespan: 2.0
