--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -134,12 +134,13 @@ skills:
       durationIncreasePerLevel: 1.0
     evade:
       enabled: true
-      maxlevel: 5
+      maxlevel: 3
       cooldown: 15.0
       duration: 1.25
       forcedDamageDelay: 400
       cooldownDecreasePerLevel: 1.0
-      internalCooldown: 0.5
+      internalCooldown: 0.6
+      internalCooldownDecreasePerLevel: 0.1
   knight:
     shieldsmash:
       enabled: true
