--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -598,9 +598,13 @@ skills:
     stampede:
       enabled: true
       maxlevel: 3
-      durationPerStack: 8.0
-      damageMultiplier: 2.0
-      maxSpeedStrength: 1
+      durationPerStack: 4.0
+      damage: 0.5
+      damageIncreasePerLevel: 0.5
+      durationPerStackDecreasePerLevel: 1.0
+      knockbackIncreasePerLevel: 0.5
+      knockback: 0.5
+      maxSpeedStrength: 2
     threateningshout:
       enabled: true
       maxlevel: 5
