--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -181,10 +181,12 @@ skills:
     levelfield:
       enabled: true
       maxlevel: 3
-      radius: 4.0
+      radius: 6.0
       radiusIncreasePerLevel: 2.0
       maxEnemies: 2
       maxEnemiesIncreasePerLevel: 1
+      baseDamage: 1.0
+      damageIncreasePerLevel: 0.0
     cleave:
       enabled: true
       maxlevel: 3
